# brscan

./: .gitignore  README.md
bropen-scan/: bropen-scan.man  bropen_scan_main.c  makefile
brsaneconfig/: brsaneconfig.c
data/: Brsane.ini
libbrscandec/: brother_deccom.h  brother_scandec.h
libbrscandec_dec/: Makefile  brother_chreso.c  brother_log.c  brother_log.h  brother_scandec.c  brother_scandec.h  ghidra_decomp.c  ghidra_decomp.h
libsane-brother/: Makefile.am  Makefile.in  bropen_com.c  bropen_com.h  bropen_debug.h  bropen_ec.h  bropen_sane.c  bropen_sane.h  bropen_scan.c  bropen_scan.h  bropen_types.c  bropen_types.h  bropen_yuv.c  bropen_yuv.h  brother.c  brother_advini.c  brother_advini.h  brother_cmatch.c  brother_devaccs.c  brother_devinfo.c  brother_devinfo.h  brother_log.c  brother_mfccmd.c  brother_mfccmd.h  brother_modelinf.c  brother_modelinf.h  brother_netdev.c  brother_netdev.h  brother_scanner.c  brother_scanner.h  meson.build  sane_strstatus.c  sanei_init_debug.c
